# mcu

01-blink/: CMakeLists.txt
02-printf/: CMakeLists.txt
03-adc/: get_adc.py  get_telemetry.py
04-bme/: CMakeLists.txt  bme_plot.py  main.c
04-dac/: CMakeLists.txt  main.c
04-dac/bme280/: bme280.c  bme280.h
libs/bme280-driver/include/: bme280-driver.h  bme280-regs.h
libs/bme280-driver/src/: bme280-driver.c
